[package]
name = "lanagrafica"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lanagrafica-server"

[dependencies]
actix-web = "3.1.0"
actix-rt = "1.1.1"
serde = { version = "1.0.110", features = ["derive"] }
chrono = {version = "0.4.11", features = ["serde"]}
uuid = {version = "1.0.0", features = ["v4"]}